# news_65_parse

./: .gitignore  Dockerfile  config.py  database.py  docker-compose.yml  example.env  main.py  process_run_parsing.py  pyproject.toml  run_news_parser.sh
api_get/: Api_mun_desc.md  api_mun.py
dev/: check_requests.html  config.py  database.py  db_news_model.py  json.txt  mun_model.py  parse.ipynb  sqlalchemy_model.py
log/: logging_settings.py
models/: NewsOrm.py  pydantic_mun_model.py  sqlalchemy_model.py
parse/: parse_astv.py  parse_mun.py
queries/: orm.py
service/: service.py
