[tool.poetry]
name = "65-parse-news"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "65_parse_news"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.2"
pydantic-settings = "^2.2.1"
lxml = "^5.2.1"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
backoff = "^2.2.1"
python-slugify = "^8.0.4"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
